--- a/server/package.json
+++ b/server/package.json
@@ -5,19 +5,27 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "start": "npm run build && node dist/index.js"
+    "start": "npm run build && node dist/index.js",
+    "test": "npm run build && mocha dist/test/*.js",
+    "docs": "esdoc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "mongoose": "^5.3.14"
+    "mocha": "^5.2.0",
+    "mongoose": "^5.3.14",
+    "sinon": "^7.1.1",
+    "sinon-mongoose": "^2.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
     "rimraf": "^2.6.2"
   }
 }
