--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev:android": "concurrently \"cd server && npm start\" \"cd client && react-native run-android\"",
-    "install:all": "concurrently \"cd server && npm install\" \"cd client && npm install\""
+    "install:all": "concurrently \"cd server && npm install\" \"cd client && npm install\"",
+    "docs": "cd server && npm run docs"
   },
   "keywords": [],
   "author": "",
