--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
-    "start": "npm run build && node dist/index.js",
-    "test": "npm run build && mocha dist/test/*.js",
+    "start": "npm run build && node dist/server.js",
+    "test": "npm run build && mocha dist/test/*.js --timeout 100000",
     "docs": "esdoc"
   },
   "author": "",
@@ -16,10 +16,13 @@
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "http-status": "^1.3.1",
     "mocha": "^5.2.0",
     "mongoose": "^5.3.14",
     "sinon": "^7.1.1",
-    "sinon-mongoose": "^2.2.1"
+    "sinon-mongoose": "^2.2.1",
+    "supertest": "^3.3.0",
+    "supertest-as-promised": "^4.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
